# cliq

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: checks.yml  debian.yml  release.yml
src/: alias.rs  browser.rs  git.rs  heimdall.rs  main.rs
src/commands/: git.rs
