[package]
name = "clik"
version = "0.1.0"
edition = "2021"
authors = ["Santhosh Chinnasamy"]
readme = "README.md"
license = "MIT"
keywords = ["clik", "shorten-urls"]
categories = ["command-line-utilities"]
homepage = "https://github.com/santhosh-chinnasamy/clik.git"
repository = "https://github.com/santhosh-chinnasamy/clik.git"

[dependencies]
toml = "0.8.13"
