[package]
name = "cliq"
description = "open frequently accessed memorable shorten urls from cli"
version = "0.1.0"
edition = "2021"
authors = ["Santhosh Chinnasamy"]
readme = "README.md"
license = "MIT"
keywords = ["cliq", "shorten-urls"]
categories = ["command-line-utilities"]
homepage = "https://github.com/santhosh-chinnasamy/cliq.git"
repository = "https://github.com/santhosh-chinnasamy/cliq.git"
exclude = [".vscode"]

[dependencies]
toml = "0.8.13"
