[package]
name = "cliq"
description = "open frequently accessed memorable shorten urls from cli"
version = "0.2.0"
edition = "2021"
authors = ["Santhosh Chinnasamy"]
readme = "README.md"
license = "MIT"
keywords = ["cliq", "shorten-urls"]
categories = ["command-line-utilities"]
homepage = "https://github.com/santhosh-chinnasamy/cliq.git"
repository = "https://github.com/santhosh-chinnasamy/cliq.git"
exclude = [".vscode"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8.13"
